--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     
     <li class="accordion__item ripple">
-      <button id="toggle1">Foodies<span class="icon-span"><img src="img/expand_more-24px.svg" alt="More icon" class="icon" width=24 height=25></span></button>
+      <button class="toggle" id="toggle1">Foodies<span class="icon-span"><img src="img/expand_more-24px.svg" alt="More icon" class="icon" width=24 height=25></span></button>
     </li>
     <ul class="inner">
       <li class="inner__item">Old Fashioned Hurgusburgus</li>
@@ -27,7 +27,7 @@
     </ul>
     
     <li class="accordion__item ripple">
-      <button id="toggle2">States<span class="icon-span"><img src="img/expand_more-24px.svg" alt="More icon" class="icon" width=24 height=25></span></button>
+      <button class="toggle" id="toggle2">States<span class="icon-span"><img src="img/expand_more-24px.svg" alt="More icon" class="icon" width=24 height=25></span></button>
     </li>
     <ul class="inner">
       <li class="inner__item">Indiana</li>
@@ -36,7 +36,7 @@
     </ul>
 
     <li class="accordion__item ripple">
-        <button id="toggle3">Dogs<span class="icon-span"><img src="img/expand_more-24px.svg" alt="More icon" class="icon" width=24 height=25></span></button>
+        <button class="toggle" id="toggle3">Dogs<span class="icon-span"><img src="img/expand_more-24px.svg" alt="More icon" class="icon" width=24 height=25></span></button>
       </li>
       <ul class="inner">
         <li class="inner__item">The Borfers</li>
@@ -45,7 +45,7 @@
       </ul>
 
       <li class="accordion__item ripple">
-        <button id="toggle4">Plants<span class="icon-span"><img src="img/expand_more-24px.svg" alt="More icon" class="icon" width=24 height=25></span></button>
+        <button class="toggle" id="toggle4">Plants<span class="icon-span"><img src="img/expand_more-24px.svg" alt="More icon" class="icon" width=24 height=25></span></button>
       </li>
       <ul class="inner">
         <li class="inner__item">Hibiscus rosa-sinensis</li>
